added shader functionality

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <input id="base" type="color" name="base" value="#000000">
             <input id="bnw" type="button" name="bnw" value="BnW">
             <input id="rainbow" type="button" name="rainbow" value="Rainbow">
+            <input id="shader" type="button" name="shader" value="Shader">
             <input id="eraser" type="button" name="eraser" value="Eraser">
             <input id="grid-lines" type="button" name="grid-lines" value="Grid Lines">
             <input id="reset" type="button" name="reset" value="Reset">
